# poetry-demo

./: .gitignore  Makefile  poetry.toml  pyproject.toml
poetry_demo/: Demo.py  utils.py
tests/: test_Demo.py
