[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["david <djimenez@savispain.es>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
demo = "poetry_demo.Demo:main()"
